Fix 1 (#13)
* social links were not visible as display was hidden, changed it to inline

* added links to the social icons

* deleted unnecessary files from assets folder

* code refactoring

* added resume to the aasset folder

* imported resume to CTA and made it downloadable

* projects image addded and all the links and description added to the project section

* changed show to Show Techs Used

* made some changes not related to code

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -81,7 +81,8 @@
 @media screen and (min-width:56.25em){
     
     .hero__socials {
-            position: absolute;
+            display: inline;
+            position: absolute; 
             top: 50%;
             transform: translateY(-50%);
             background: #fff;
